--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
 	<application
 		android:label="raylib-hx example"
-		android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen"
+		android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
 		android:allowBackup="true"
 		android:hardwareAccelerated="true"
 		android:allowNativeHeapPointerTagging="false"
