--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -35,6 +35,8 @@ jobs:
           haxe compile.hxml
           cd ${{github.workspace}}
           haxe build.hxml -D ANDROID_NDK_DIR=${{ steps.setup-ndk.outputs.ndk-path }}
+        env:
+          ANDROID_NDK_ROOT: ${{ steps.setup-ndk.outputs.ndk-path }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@main
