--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
 		android:allowBackup="true"
 		android:hardwareAccelerated="true"
 		android:allowNativeHeapPointerTagging="false"
-		android:appCategory="game">
+		android:appCategory="game"
+		android:clearTaskOnLaunch="true">
 
 		<activity
 			android:name="NativeLoader"
