--- a/project/gradle.properties
+++ b/project/gradle.properties
@@ -1,19 +1,73 @@
 # Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
+
+# Note for IDE users (e.g., Android Studio):
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-# For more details on how to configure your build environment visit
+# For more details on configuring your build environment, visit:
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-org.gradle.parallel=true
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
+
+# Specifies the JVM arguments used for the Gradle daemon process.
+# This is particularly useful for tweaking memory settings.
+# -Xmx2048m sets the maximum heap size to 2048 MB.
+# -Dfile.encoding=UTF-8 ensures the default file encoding is set to UTF-8.
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+
+# Enables non-transitive R class generation for Android projects.
+# When set to true, the R class will not contain resources from dependencies.
+android.nonTransitiveRClass=true
+
+# Enable the use of AndroidX libraries in the project.
+# AndroidX is the successor to the original Android support libraries,
+# providing backward compatibility and a consistent API.
+# For more information, visit:
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
+
+# Determines whether to automatically convert third-party libraries
+# to use AndroidX. When false, libraries using the old support library
+# will not be converted to AndroidX automatically.
+android.enableJetifier=false
+
+# The name of your project.
+app.name=rGame.hx
+
+# The native library name for your application.
+# This is typically used for native bindings and integrations.
+app.native_library_name=Main
+
+# The application ID (package name) for your app.
+# It uniquely identifies the app on the device and in the Play Store.
+app.application_id=org.haxe.raylib
+
+# Screen orientation setting for the app.
+# Available options: [ portrait | landscape ]
+# This setting forces the app to use landscape orientation.
+app.orientation=landscape
+
+# Version information for the project.
+# - version_name is the user-friendly version number displayed to users.
+# - version_code is an integer that represents the version for internal tracking.
+app.version_name=1.0
+app.version_code=1
+
+# Raymob feature settings.
+
+# Enable or disable internet access for the app.
+features.internet=false
+
+# Enable or disable the use of vibration in the app.
+features.vibration=false
+
+# Enable or disable accelerometer access.
+features.accelerometer=false
+
+# Enable or disable software keyboard support.
+features.soft_keyboard=false
+
+# Display settings for the app.
+# - keep_on: If true, prevents the screen from dimming or turning off.
+# - immersive: If true, enables immersive mode for full-screen display.
+# - into_cutout: If true, allows content to appear in screen cutouts (notches).
+features.display.keep_on=true
+features.display.immersive=true
+features.display.into_cutout=true
