--- a/project/app/build.gradle
+++ b/project/app/build.gradle
@@ -1,6 +1,6 @@
 plugins
 {
-	id('com.android.application') version '7.3.0'
+	id 'com.android.application'
 }
 
 repositories
@@ -9,24 +9,65 @@ repositories
 	mavenCentral()
 }
 
+def isAtLeastOnePropertyTrueForPrefix(String prefix)
+{
+    return project.properties.any{ key, value -> key.startsWith(prefix) && value == 'true'}
+}
+
 android
 {
-	namespace 'org.haxe.raylib'
+	namespace project.properties['app.application_id']
 	compileSdkVersion 33
 	defaultConfig
 	{
-		applicationId 'org.haxe.raylib'
 		minSdkVersion 29
 		targetSdkVersion 33
-		versionCode 1
-		versionName '1.0'
+		applicationId project.properties['app.application_id']
+		versionCode Integer.parseInt(project.properties['app.version_code'])
+		versionName project.properties['app.version_name']
+
+		buildConfigField("boolean", "FEATURE_VIBRATION", project.properties['features.vibration'] ?: "false")
+		buildConfigField("boolean", "FEATURE_ACCELEROMETER", project.properties['features.accelerometer'] ?: "false")
+		buildConfigField("boolean", "FEATURE_SOFT_KEYBOARD", project.properties['features.soft_keyboard'] ?: "false")
+		buildConfigField("boolean", "FEATURE_DISPLAY_KEEP_ON", project.properties['features.display.keep_on'] ?: "false")
+		buildConfigField("boolean", "FEATURE_DISPLAY_IMMERSIVE", project.properties['features.display.immersive'] ?: "false")
+		buildConfigField("boolean", "FEATURE_DISPLAY_INTO_CUTOUT", project.properties['features.display.into_cutout'] ?: "false")
+		buildConfigField("boolean", "FEATURE_DISPLAY", isAtLeastOnePropertyTrueForPrefix('features.display.').toString())
+
+		manifestPlaceholders = [
+			'APP_LIB_NAME': project.properties['app.native_library_name'],
+			'APP_ORIENTATION': project.properties['app.orientation'],
+			'FEATURE_INTERNET': project.properties['features.internet'],
+			'FEATURE_VIBRATION': project.properties['features.vibration'],
+			'FEATURE_ACCELEROMETER': project.properties['features.accelerometer']
+		]
 	}
 	buildTypes
 	{
+		debug
+		{
+			debuggable true
+			jniDebuggable true
+		}
 		release
 		{
-			minifyEnabled false
+			minifyEnabled true
+			shrinkResources true
 			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+			debuggable false
+			jniDebuggable false
+			pseudoLocalesEnabled false
+			zipAlignEnabled true
 		}
+	}
+	compileOptions
+	{
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+	buildFeatures
+	{
+		buildConfig true
+		viewBinding true
 	}
 }
