--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Compiling
         run: |
-          haxelib git raylib-hx https://github.com/foreignsasquatch/raylib-hx.git android --quiet
+          haxelib git raylib-hx https://github.com/foreignsasquatch/raylib-hx.git android --quiet --skip-dependencies
           haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git --quiet
           cd $(haxelib libpath hxcpp)/tools/hxcpp
           haxe compile.hxml
