--- a/project/gradle.properties
+++ b/project/gradle.properties
@@ -62,7 +62,7 @@ features.vibration=false
 features.accelerometer=false
 
 # Enable or disable software keyboard support.
-features.soft_keyboard=false
+features.soft_keyboard=true
 
 # Display settings for the app.
 # - keep_on: If true, prevents the screen from dimming or turning off.
