--- a/project/gradle.properties
+++ b/project/gradle.properties
@@ -56,7 +56,7 @@ app.version_code=1
 features.internet=false
 
 # Enable or disable the use of vibration in the app.
-features.vibration=false
+features.vibration=true
 
 # Enable or disable accelerometer access.
 features.accelerometer=false
