--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-	<!--GL ES Version-->
+	<!--Features-->
 
 	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	<uses-feature android:name="android.hardware.sensor.accelerometer" android:required="${FEATURE_ACCELEROMETER}" />
 
-	<!-- Conditionally include permission features -->
+	<!--Conditionally include permission features-->
 
 	<uses-permission android:name="android.permission.INTERNET" android:required="${FEATURE_INTERNET}" />
 	<uses-permission android:name="android.permission.VIBRATE" android:required="${FEATURE_VIBRATION}" />
-	<uses-feature android:name="android.hardware.sensor.accelerometer" android:required="${FEATURE_ACCELEROMETER}" />
 
 	<!--Application config-->
 
