--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   Build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
