--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   Build:
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -24,8 +24,12 @@ jobs:
       - name: Compiling
         run: |
           haxelib git raylib-hx https://github.com/foreignsasquatch/raylib-hx.git --quiet --skip-dependencies
-          haxelib install hxcpp --quiet
-          .\build.bat
+          haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git --quiet
+          cd $(haxelib libpath hxcpp)/tools/hxcpp
+          haxe compile.hxml
+          cd ${{github.workspace}}
+          chmod +x ./build.sh
+          ./build.sh
         env:
           ANDROID_NDK_ROOT: ${{ steps.setup-ndk.outputs.ndk-path }}
           JAVA_HOME: ${{ env.JAVA_HOME_17_X64 }}
@@ -36,3 +40,4 @@ jobs:
           name: androidBuild
           path: project/app/build/outputs/apk/debug
           if-no-files-found: warn
+  
